force-app/main/default/objects/Work_Order_Template_Dependency__c/Work_Order_Template_Dependency__c.object-meta.xml
<CustomObject>
    <description>Mimics the Appointment Dependency fields so dependency can be added to the appointment via flow</description>
    <label>Work Order Template Dependency</label>
    <nameField>
        <displayFormat>WOTemp-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Template Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>