force-app/main/default/objects/Work_Order_Template_Dependency__c/fields/Dependency__c.field-meta.xml
<CustomField>
    <fullName>Dependency__c</fullName>
    <label>Dependency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same Start</fullName>
                <default>true</default>
                <label>Same Start</label>
            </value>
            <value>
                <fullName>Start After Finish</fullName>
            </value>
            <value>
                <fullName>Start After Finish and Same Day</fullName>
            </value>
            <value>
                <fullName>Immediately Follow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>