force-app/main/default/objects/Work_Order_Template_Dependency__c/fields/First_WO_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>First_WO_Work_Type__c</fullName>
    <formula>First_Work_Order_Item__r.Work_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First WO Work Type</label>
    <type>Text</type>
</CustomField>