force-app/main/default/objects/Work_Order_Template_Dependency__c/fields/First_WO_Work_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>First_WO_Work_Type_Id__c</fullName>
    <formula>CASESAFEID(First_Work_Order_Item__r.Work_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First WO Work Type Id</label>
    <type>Text</type>
</CustomField>