force-app/main/default/objects/Work_Order_Template_Dependency__c/fields/First_Work_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>First_Work_Order_Item__c</fullName>
    <label>First Work Order Item</label>
    <referenceTo>MRay_Work_Order_Template_Items__c</referenceTo>
    <relationshipLabel>Work Order Template Dependencies</relationshipLabel>
    <relationshipName>Work_Order_Template_Dependencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>