force-app/main/default/objects/Work_Order_Template_Dependency__c/fields/Same_Resource__c.field-meta.xml
<CustomField>
    <fullName>Same_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Resource</label>
    <type>Checkbox</type>
</CustomField>