force-app/main/default/objects/Work_Order_Template_Dependency__c/fields/Second_Work_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Second_Work_Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Work Order Item</label>
    <referenceTo>MRay_Work_Order_Template_Items__c</referenceTo>
    <relationshipLabel>Work Order Template Dependencies (Second Work Order Item)</relationshipLabel>
    <relationshipName>Work_Order_Template_Dependencies1</relationshipName>
    <type>Lookup</type>
</CustomField>