force-app/main/default/objects/Work_Order_Template_Dependency__c/fields/Work_Order_Template__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Order Template</label>
    <referenceTo>MRay_Work_Order_Template__c</referenceTo>
    <relationshipLabel>Work Order Template Dependencies</relationshipLabel>
    <relationshipName>Work_Order_Template_Dependencies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>